tests/quicklook/gfproject/log_msg_excl.txt
#
# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
#
# Copyright (c) 2010 Oracle and/or its affiliates. All rights reserved.
#
# The contents of this file are subject to the terms of either the GNU
# General Public License Version 2 only ("GPL") or the Common Development
# and Distribution License("CDDL") (collectively, the "License").  You
# may not use this file except in compliance with the License.  You can
# obtain a copy of the License at
# https://glassfish.dev.java.net/public/CDDL+GPL_1_1.html
# or packager/legal/LICENSE.txt.  See the License for the specific
# language governing permissions and limitations under the License.
#
# When distributing the software, include this License Header Notice in each
# file and include the License file at packager/legal/LICENSE.txt.
#
# GPL Classpath Exception:
# Oracle designates this particular file as subject to the "Classpath"
# exception as provided by Oracle in the GPL Version 2 section of the License
# file that accompanied this code.
#
# Modifications:
# If applicable, add the following below the License Header, with the fields
# enclosed by brackets [] replaced by your own identifying information:
# "Portions Copyright [year] [name of copyright owner]"
#
# Contributor(s):
# If you wish your version of this file to be governed by only the CDDL or
# only the GPL Version 2, indicate your decision by adding "[Contributor]
# elects to include this software in this distribution under the [CDDL or GPL
# Version 2] license."  If you don't indicate a single choice of license, a
# recipient has the option to distribute your version of this file under
# either the CDDL, the GPL Version 2 or to extend the choice of license to
# its licensees as provided above.  However, if you add GPL Version 2 code
# and therefore, elected the GPL Version 2 license, then the option applies
# only if the new code is made subject to such option by the copyright
# holder.
#

# Lines in server.log that contain any of the following words
# will be skipped.
# When adding new words, please add a comment with the reason.


# Loggers of excluded third-party libraries
com.sun.grizzly.
org.eclipse.persistence
org.hibernate.validator
org.jboss.weld
# Shoal logging system overhaul is MS5 deliverable
ShoalLogger

# Stacktraces
	at 


# Grizzly start-up message
Grizzly Framework 


# GlassFish start-up messages
# Common messages have [^\w] appended to reduce hits when used in other messages.
INFO: JVM invocation command line:
UnlockDiagnosticVMOptions
-XX:MaxPermSize=
-XX:NewRatio=
LogVMOutput
com.sun.enterprise.admin.launcher.GFLauncherLogger info
java.exe
-cp
glassfish/modules/glassfish.jar
-XX:LogFile=
-Xmx
-javaagent:
-client[^\w]
-Dosgi.shell.telnet.maxconn=
-Djdbc.drivers=org.apache.derby.jdbc.ClientDriver
-Dfelix.fileinstall.dir=
-Djavax.net.ssl.keyStore=
-Dosgi.shell.telnet.port=
-Djava.security.policy=
-Dfelix.fileinstall.log.level=
-Dfelix.fileinstall.poll=
-Dcom.sun.aas.instanceRoot=
-Dcom.sun.enterprise.config.config_environment_factory_class=com.sun.enterprise.config.serverbeans.AppserverConfigEnvironmentFactory
-Dosgi.shell.telnet.ip=
-Djava.endorsed.dirs=
-Dcom.sun.aas.installRoot=
-Djava.ext.dirs=
-Dfelix.fileinstall.bundles.new.start=
-Djavax.net.ssl.trustStore=
-Dcom.sun.enterprise.security.httpsOutboundKeyAlias=
-Djava.security.auth.login.config=
-DANTLR_USE_DIRECT_CLASS_LOADING=
-Dorg.glassfish.web.rfc2109_cookie_names_enforced=
-Djava.library.path=
com.sun.enterprise.glassfish.bootstrap.ASMain
-domainname
domain1[^\w]
-asadmin-args
start-domain,,,domain1
-instancename
server[^\w]
-verbose
false[^\w]
-debug
-asadmin-classpath
glassfish/modules/admin-cli.jar
-asadmin-classname
com.sun.enterprise.admin.cli.AsadminMain
-upgrade
-type[^\w]
DAS[^\w]
-domaindir
glassfish/domains/domain1
-read-stdin
true[^\w]
INFO: Successfully launched in 
Running GlassFish Version
This message was emitted before the logging service started:


# No need to log following log level messages
\|CONFIG\|
\|FINE\|
\|FINER\|
\|FINEST\|


# Message mistakenly picked up due to line ending in it:
MQJMSRA_RA4001: getJMXServiceURLList:Exception:Message=No JMXServiceURL was found for connector jmxrmi.
Address used: [^\w]


# Exceptions
java.lang.IllegalArgumentException: 
java.net.SocketException
java.net.MalformedURLException
javax.management.InstanceAlreadyExistsException:


# Messages that probably should have Id's but currently don't have any:
# These are to be removed as the messages are fixed towards HCF,
# or moved up with a comment for the reason not to give them unique Id's.
# Some of the messages here are printed by the test applications.
# As they have no unique logger name I cannot filter them out more efficiently.


# Dont find in v3 source code - No need to fix this
Initializing Mojarra 
osgi-javaee-base.jar
org.apache.felix.scr.jar
org.apache.felix.fileinstall-autodeploy-bundles.cfg
osgi-web-container.jar
Started bundle: file:
com.sun.jmx.interceptor.DefaultMBeanServerInterceptor.
org.glassfish.admin.amx.impl.config.AMXConfigLoader
amx-pref =
Unprocessed event : UnprocessedChangeEvent
org.apache.felix.bundlerepository.jar
Address used:
cannot load 
GrizzlyNetworkManager Configuration
BIND_INTERFACE_ADDRESS
TCPSTARTPORT..TCPENDPORT
MULTICAST_ADDRESS:MULTICAST_PORT:
FAILURE_DETECT_TCP_RETRANSMIT_TIMEOUT(ms)
ThreadPool CORE_POOLSIZE
HIGH_WATER_MARK
START_TIMEOUT(ms)
MAX_WRITE_SELECTOR_POOL_SIZE
VIRTUAL_MULTICAST_URI_LIST
instantiated following NetworkManager
GMS:Reporting Joined and Ready state to group
GMS View Change Received for group
Calling reportMyState() with READY
Leaving GMS group
normal termination of ViewWindow thread for group
MessageWindow thread for group
SignalHandler task named
SLF4J:
MemberId: eein

# From QL Test - No need to fix this
In SingletonBean::init()
sessionCtx = SingletonBean; id: 
In SingletonBean::init
In HelloBean::init
In HelloBean::hello
 says hello, world
^.{0,6}\|#\]
BeanMessage: appendMessage=
Hello from beanLeaf: 
resource-adapter-name=AMXConfigProxyTests.connectorConnectionPoolTest
name=AMXConfigProxyTests.connectorConnectionPoolTest
user-name=testUser, password=testPassword
    \]
description=desc.for.prop
desc.for.AMXConfigProxyTests
AMXConfigProxyTests.TEST_PROP
Servlet processing do get..
Filter.init
Filter.doFilter
Filter.doFilter.msg = PASS-:
testcase=noleak
testcase=usertx
testcase=llinit
testcase=llquery
2. loading, deptName = Marketing
testcase = initialize
1. Persisting project....
Prepersit m1() called for EmployeeEmployee 
testcase = validatePersist
2. Persisting employee with long name....
Prepersit m1() called for EmployeeEmployee 
Expected BV Ex
msg=Bean Validation constraint\(s\) violated while executing Automatic Bean Validation on callback event:
testcase = validateUpdate
3. Updating employee with long name....
Expected BV Ex
msg=Bean Validation constraint(s) violated while executing Automatic Bean Validation on callback event:'preUpdate'. Please refer to embedded ConstraintViolations for details.
testcase = validateRemove
4. Removing employee with long name....
 called for EmployeeEmployee 
OK: not get BV ex for remove
testcase = verify
5. Verifying employee ....
, name=emp
In HelloBean::
servlet init: message=PostBeanRootPostBeanLeafHelloBeanLeaf
BeanMessage: appendMessage=PostBeanRootPostBeanLeafHelloBeanLeafHelloBeanRoot
Persisting ....
JpaBean id=1, name=JpaBean
==== : com.sun.ejb.containers.EJBLocalObjectInvocationHandler@
In HelloBean::woke up from 5second sleep
Got message!!!
Calling hello
HelloStateless
HelloStateful
Business method marked with @Remove called in local ejb3.0 stateful
PRE-DESTROY callback received in local ejb3.0 stateful
NRU-com.sun.mdb.HelloStateful: Cannot load from  BACKUPSTORE FOR Key: 
Successfully caught EJBException after  accessing removed SFSB
Sending message
message sent
In InterceptorB::init()
StatelessBean = numberguess.StatelessLocal_
In InterceptorA::init()
statelessLocal = numberguess.StatelessLocal_
foo = numberguess.Foo
In StatefulBean::init()
sessionCtx = StatefulBean; id: 
In SingletonBean::hello()
In StatelessBean::init()
singleton = numberguess.__EJB31_Generated__SingletonBean__Intf____Bean__
In StatelessBean::hello()
In Game::reset()
In InterceptorB::around
In InterceptorA::around
In StatefulBean::hello()
Filter.destroy
Realm file was successfully updated.
In SingletonBean::destroy()
In InterceptorB::destroy()
In InterceptorA::destroy()
In StatefulBean::destroy()
In StatelessBean::destroy()
In HelloBean::destroy()
Server restart initiated


# From LocalStrings.properties file - No need to fix this
was successfully deployed in
The Admin Console is installing...
The Admin Console is already installed, but not yet loaded.
The Admin Console is loading...
The Admin Console application is loaded.
Probe is not yet registered: glassfish:ejb:
The Admin Console is already installed, but not yet loaded.
Server shutdown initiated
Sun specific deployment descriptor
The configured OSGi Telnet port
Error transferring service tags
Process executing stclient command failed


# Waiting to be fixed: 11627
endpoint.determine.destinationtype


# Waiting to be fixed: 11195
FromWsdl


# Waiting to be fixed: 12310
!!!!! Cannot create Update Center Image for 


# Waiting to be fixed: 12302
Loading __admingui Application done is 


# Waiting to be fixed: 12309
Done with starting web container


# Waiting to be fixed: 12304
Security startup service called
Realm admin-realm of classtype com.sun.enterprise.security.auth.realm.file.FileRealm successfully created.
Realm file of classtype com.sun.enterprise.security.auth.realm.file.FileRealm successfully created.
Realm certificate of classtype com.sun.enterprise.security.auth.realm.certificate.CertificateRealm successfully created.
Security service\(s\) started successfully
Realm file was successfully updated.
Web login failed: Login failed: javax.security.auth.login.LoginException: Failed file login for j2ee.


# Waiting to be fixed: 12251
Portable JNDI names for EJB 
A system exception occurred during an invocation on EJB 
javax.ejb.NoSuchObjectLocalException: The EJB does not exist. session-key: 
 Current thread done cleanup
Glassfish-specific \(Non-portable\) JNDI names for EJB 
StatefulContainerbuilder instantiated store
StatefulContainerBuilder.buildStoreManager()

# Waiting to be fixed: 12207
issueAttributeChangeForXmlAttrName\(\): MBean attribute name not found for xml name, using xml name: name
AttributeChangeNotification: 


# Waiting to be fixed: 12305
admin console: initSessionAttributes
Error in getStandaloneInstances
Error in getClusters
restRequest: endpoint

# Waiting to be fixed: 12307
JMS Service Connection URL is

# Waiting to be fixed: 12657
SynchronizeFiles: logger

# Waiting to be fixed: 13155
PersistenceStrategyBuilderFactory>>createPersistenceStrategyBuilder

# Waiting to be fixed: 11990
Adding instance
Deleting instance
